--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,17 @@
+:root {
+  --font-primary: 'Open Sans', sans-serif;
+  --font-secondary: 'Fredoka', sans-serif;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: var(--font-primary);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.secondary-font {
+  font-family: var(--font-secondary);
 }
 
 code {
